[metadata]
name = glimpse
version = 0.1
summary = Glance Proxy Service
author = Derrick J. Wippler
author-email = thrawn01@gmail.com
home-page = http://thrawn01.org/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    glimpse-api = glimpse.server:main
